Leverage from LinkedList removeFirst/addLast methods